RESOLVED FIXED51531
Fix check by undefined macro
https://bugs.webkit.org/show_bug.cgi?id=51531
Summary Fix check by undefined macro
Lucas De Marchi
Reported 2010-12-23 03:43:36 PST
Fix check by undefined macro
Attachments
Patch (1.35 KB, patch)
2010-12-23 03:45 PST, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-12-23 03:45:11 PST
WebKit Commit Bot
Comment 2 2010-12-23 06:25:02 PST
Comment on attachment 77322 [details] Patch Clearing flags on attachment: 77322 Committed r74555: <http://trac.webkit.org/changeset/74555>
WebKit Commit Bot
Comment 3 2010-12-23 06:25:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.