2010-12-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        Fix check by undefined macro
        https://bugs.webkit.org/show_bug.cgi?id=51531

        Fix check by undefined macro

        When building EFL port with libsoup, BUILDING_GTK__ is not defined,
        leading to warnings during compile. We actually have to use an #ifdef
        instead of an #if.

        No change in functionality so no new tests.

        * platform/network/soup/cache/webkit/soup-cache.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@74555 bbb929c8-8fbe-4397-9dbb-9b2b20218538