third_party/WebKit/WebCore/platform/network/soup/cache/webkit/soup-cache.h
@@ -24,7 +24,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WEBKIT_SOUP_CACHE_H
 #define WEBKIT_SOUP_CACHE_H 1
 
-#if BUILDING_GTK__
+#ifdef BUILDING_GTK__
 #include <webkit/webkitdefines.h>
 #else
 #ifndef WEBKIT_API
